[gd_scene load_steps=2 format=3 uid="uid://bc6kfu3avld0"]

[ext_resource type="Script" path="res://src/ui_components/match/statistics/match_stats.gd" id="1_14np8"]

[node name="Stats" type="MarginContainer"]
offset_right = 1281.0
offset_bottom = 444.0
script = ExtResource("1_14np8")

[node name="VBoxContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/v_separation = 0
columns = 3

[node name="HomePossession" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "45%"

[node name="Possession" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "POSSESSION"
horizontal_alignment = 1

[node name="AwayPossession" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "55%"
horizontal_alignment = 2

[node name="HomeShots" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "12"

[node name="Shots" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SHOTS"
horizontal_alignment = 1

[node name="AwayShots" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeShotsOnTarget" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="ShotsOnTarget" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SHOTS_ON_TARGET"
horizontal_alignment = 1

[node name="AwayShotsOnTarget" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeFouls" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Fouls" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FOULS"
horizontal_alignment = 1

[node name="AwayFouls" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeFreeKicks" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="FreeKicks" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FREE_KICKS"
horizontal_alignment = 1

[node name="AwayFreeKicks" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomePenalties" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Penalties" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PENALTIES"
horizontal_alignment = 1

[node name="AwayPenalties" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeThrowIn" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="ThrowIn" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "THROW_INS"
horizontal_alignment = 1

[node name="AwayThrowIn" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeCorners" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Corners" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CORNERS"
horizontal_alignment = 1

[node name="AwayCorners" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomePass" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Pass" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PASS"
horizontal_alignment = 1

[node name="AwayPass" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomePassSuccess" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "100 - 90%"

[node name="PassSuccess" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PASS_SUCCESS"
horizontal_alignment = 1

[node name="AwayPassSuccess" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "60% - 26"
horizontal_alignment = 2

[node name="HomeYellowCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="YellowCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "YELLOW_CARDS"
horizontal_alignment = 1

[node name="AwayYellowCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HomeRedCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="RedCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "RED_CARDS"
horizontal_alignment = 1

[node name="AwayRedCards" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2
